--- a/iconsop/shoepage.html
+++ b/iconsop/shoepage.html
@@ -9,13 +9,13 @@
   
 <body>
 <div id="start">
-<a href="/current/notavailable.html">        
+<a href="../current/notavailable.html">        
     <img id="ham" src="https://i.ibb.co/b29bNBd/m2i8-G6-G6b1m2-A0-G6.png" alt="hamenu">    
     </a>  
-<a href="/index.html"><img id="mainphoto" src="https://i.ibb.co/d2YFtPW/amazon-logo-1024x683.png" alt="amazon"></img></a>
+<a href="../index.html"><img id="mainphoto" src="https://i.ibb.co/d2YFtPW/amazon-logo-1024x683.png" alt="amazon"></img></a>
  <a href="/imp/login.html">
  <img id="login" src="https://i.ibb.co/R9HWXM6/Pngtree-white-line-drawing-user-icon-4420035.png" alt="login"></img> </a>
- <a href="/imp/addtocart.html">
+ <a href="../imp/addtocart.html">
  <img id="cart" src="https://i.ibb.co/K2tP6Xf/clipart1396281.png" alt="cart"></img>
  </a>
 <input id="searchbar" type="text" placeholder="Search Amazon">
