--- a/iconsop/shoepage.html
+++ b/iconsop/shoepage.html
@@ -9,20 +9,20 @@
   
 <body>
 <div id="start">
-<a href="Amazon_MobileWeb_ Clone/current/notavailable.html">        
+    <a href="../current/notavailable.html">        
     <img id="ham" src="https://i.ibb.co/b29bNBd/m2i8-G6-G6b1m2-A0-G6.png" alt="hamenu">    
-    </a>  
-<a href="Amazon_MobileWeb_ Clone/index.html"><img id="mainphoto" src="https://i.ibb.co/d2YFtPW/amazon-logo-1024x683.png" alt="amazon"></img></a>
- <a href="Amazon_MobileWeb_ Clone/imp/login.html">
+    </a>
+<a href="../index.html"><img id="mainphoto" src="https://i.ibb.co/d2YFtPW/amazon-logo-1024x683.png" alt="amazon"></img></a>
+ <a href="../imp/login.html">
  <img id="login" src="https://i.ibb.co/R9HWXM6/Pngtree-white-line-drawing-user-icon-4420035.png" alt="login"></img> </a>
- <a href="Amazon_MobileWeb_ Clone/imp/addtocart.html">
+ <a href="../imp/addtocart.html">
  <img id="cart" src="https://i.ibb.co/K2tP6Xf/clipart1396281.png" alt="cart"></img>
  </a>
 <input id="searchbar" type="text" placeholder="Search Amazon">
 </div>
 <div id="location">
   <marquee>Delivering to 123, Sunrise Avenue, Mystic Meadows, City of Serenity, Rajasthan 302020, India</marquee>
-</div>      
+</div>
 
 
 <div id="pricediv">
@@ -88,7 +88,7 @@
     <p id="shoe10amount">Only 9 left in stock.</p>
 </div>
 <div id="theend">
-         <a id="endofme" href="shoepage.html">
+         <a id="endofme" href="fashion.html">
              &#8593; <br>
              TOP OF PAGE
          </a> 
